package observerpattern.baitapca6;

public interface PlayerData_listener {
  void listener(PlayerData data);
}
